# tipi-docker

./: .env.example  .gitattributes  .gitignore  README.md  compose.registry.yaml  compose.rollback.yaml  compose.yaml
config/: openclaw.json  tipi-autonomy-request.md  tipi-bootstrap-answers.md
gateway/: Dockerfile  patch-spanish-realtime.mjs
scripts/: bootstrap-openclaw-windows.ps1  bootstrap-openclaw.sh  doctor.sh  download-model.ps1  download-model.sh  enable-autonomy-windows.ps1  enable-autonomy.sh  host-bridge-windows.ps1  host-exec-safety.mjs  host-exec-safety.test.mjs  host-exec.mjs  install.sh  lib-tipi.sh  network-watchdog.sh  setup-windows.ps1  show-logs-windows.ps1  show-logs.sh  smoke-agent.sh  start-host-bridge-windows.ps1  start-windows.ps1  stop-windows.ps1  stop.sh  sync-openclaw-config.mjs  test-wake-room.sh  update-and-start.sh  update-windows.ps1
systemd/: tipi-network-watchdog.service  tipi.service
voice/: Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
voice/tests/: test_app.py  test_audio.py  test_audio_controls.py  test_config.py  test_conversation_log.py  test_gateway.py  test_identity.py  test_intents.py  test_voices.py  test_wake.py
voice/tipi_voice/: __init__.py  __main__.py  app.py  audio.py  audio_controls.py  config.py  conversation_log.py  gateway.py  identity.py  intents.py  voices.py  wake.py
voice/tools/: wake_room_test.py
workspace/: AGENTS.md  BOOT.md  CARETAKER_LESSONS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  openclaw-workspace-state.json
(+1 files in other folders)
