[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tipi-voice"
version = "0.2.4"
description = "Puente de audio local entre una Raspberry Pi y OpenClaw Talk"
requires-python = ">=3.12,<3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["tipi_voice*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
]
